# c_lab_works

lab0/src/: main.c
lab1-0/src/: main.c
lab1-1/src/: main.c
lab1-2/: README.md
lab1-2/src/: main.c
lab10/: CMakeLists.txt
lab10/src/: AndrewAlgorithm.c  AndrewAlgorithm.h  main.c
lab11/: CMakeLists.txt
lab11/src/: backpack.c  backpack.h  main.c
lab2/src/: main.c
lab3-0/src/: main.c
lab3-1/src/: main.c
lab4/src/: main.c
lab5/: CMakeLists.txt
lab5/src/: archiverTools.c  archiverTools.h  compress.c  compress.h  decompress.c  decompress.h  heap.c  heap.h  huffmanTree.c  huffmanTree.h  main.c
lab6-0/: CMakeLists.txt
lab6-0/src/: AVLTree.c  AVLTree.h  main.c
lab6-1/: CMakeLists.txt
lab6-1/src/: Tree.c  Tree.h  main.c
lab6-2/: CMakeLists.txt
lab6-2/src/: BTree.c  BTree.h  main.c
lab6-3/: CMakeLists.txt
lab6-3/src/: main.c  prefix_tree.c  prefix_tree.h  string_units.c  string_units.h
lab7/: CMakeLists.txt
lab7/src/: graph_units.c  graph_units.h  main.c  topological_sort.c  topological_sort.h
lab8-0/: CMakeLists.txt
lab8-0/src/: Kruskal.c  Kruskal.h  main.c
lab8-1/: CMakeLists.txt
lab8-1/src/: graph.c  graph.h  main.c
lab9/: CMakeLists.txt
lab9/src/: dijkstra.c  dijkstra.h  graph_utils.c  graph_utils.h  main.c
